<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="events">Events</string>
    <string name="members">Members</string>
    <string name="history">History</string>
    <string name="blank" />
    <string name="event_image">Event Image</string>
    <string name="province_placeholder">Maltepe / Istanbul</string>
    <string name="join">Join</string>
    <string name="create_group_event">Create Group Event</string>
    <string name="leave_group">Leave Group</string>
    <string name="leave_group_confirmation">Are you sure you want to leave the group?</string>
    <string name="member_avatar">Member Avatar</string>
    <string name="kick_user">kick user</string>
    <string name="kick_specific_user">Kick %1$s</string>
    <string name="are_you_sure_you_want_to_kick">Are you sure you want to kick %1$s?</string>
    <string name="kick">Kick</string>
    <string name="cancel">Cancel</string>
    <string name="you_cannot_kick_yourself">You can\'t kick yourself</string>
    <string name="delete_group">Delete Group</string>
    <string name="close_group">Close Group</string>
    <string name="close">Close</string>
    <string name="close_group_information">When you delete the group, everyone will leave the group.</string>
    <string name="no_event_information">There is no event in your group ask your admin to create an event</string>
    <string name="no_event_history">You can see the old group events here</string>
    <string name="set_location">Set Location</string>
    <string name="event_name">Event Name</string>
    <string name="description">Description</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="zoom_in">Zoom In</string>
    <string name="event_type">Event Type</string>
    <string name="start_and_end_date">Start/End Date</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="select_end_date">Select End Date</string>
    <string name="share_invite_code">Share Invite Code</string>
    <string name="join_our_group">Join our group!</string>
    <string name="hey_join_our_group_using_this_group_id">Hey! Join our group using this Group ID: %1$s</string>
    <string name="share_group_id_via">Share Group ID via</string>
    <string name="admin">Admin</string>
    <string name="member">Member</string>
    <string name="leave">Leave</string>
    <string name="participants">Participants</string>
    <string name="see_live_locations">See Live Locations</string>
</resources>