<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".creategroupevent.CreateGroupEventFragment">

        <TextView
            android:id="@+id/textViewCreateGroupEventLocation"
            style="@style/HeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:text="@string/location"
            android:textSize="@dimen/text_title"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewCreateGroupEventMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            app:layout_constraintTop_toBottomOf="@id/textViewCreateGroupEventLocation"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="1dp">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/mapFragmentCreateGroupEvent"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="200dp" />
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/linearLayoutSetLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="@drawable/background_border_button"
            android:weightSum="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardViewCreateGroupEventMap">

            <TextView
                android:id="@+id/textViewCreateGroupEventSetLocation"
                style="@style/HeaderTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/spacing_medium"
                android:layout_weight="8"
                android:text="@string/set_location"
                android:textSize="@dimen/text_title" />

            <ImageButton
                android:id="@+id/imageButtonSetLocation"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="@dimen/spacing_large"
                android:layout_weight="2"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/set_location"
                android:src="@drawable/ic_right_arrow"
                app:layout_constraintBottom_toBottomOf="@id/textViewCreateGroupEventSetLocation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/textViewCreateGroupEventSetLocation" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewCreateGroupEventFullAddress"
            style="@style/HeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:textSize="@dimen/text_large"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutSetLocation" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldCreateGroupEventEventName"
            style="@style/EditText.Togather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:hint="@string/event_name"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toBottomOf="@id/textViewCreateGroupEventFullAddress">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputCreateGroupEventEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldCreateGroupEventEventDescription"
            style="@style/EditText.Togather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/description"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toBottomOf="@id/textFieldCreateGroupEventEventName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputCreateGroupEventEventDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldCreateGroupEventEventType"
            style="@style/TogatherDropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/event_type"
            app:layout_constraintTop_toBottomOf="@id/textFieldCreateGroupEventEventDescription">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/autoCompleteTextViewEventType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewCreateGroupEventMaxParticipants"
            style="@style/HeaderTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/participants"
            app:layout_constraintTop_toTopOf="@id/counterViewCreateGroupEventMaxParticipants"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/counterViewCreateGroupEventMaxParticipants" />

        <com.evirgenoguz.core.presentation.component.CounterView
            android:id="@+id/counterViewCreateGroupEventMaxParticipants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textFieldCreateGroupEventEventType" />

        <TextView
            android:id="@+id/textViewCreateGroupEventStartAndEndDate"
            style="@style/HeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/start_and_end_date"
            android:textSize="@dimen/text_large"
            app:layout_constraintTop_toBottomOf="@id/counterViewCreateGroupEventMaxParticipants" />

        <ImageButton
            android:id="@+id/imageButtonSelectStartDate"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_small"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/create_event"
            android:src="@drawable/ic_calendar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewCreateGroupEventStartAndEndDate" />

        <TextView
            android:id="@+id/textViewCreateGroupEventStartDate"
            style="@style/DescriptionTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:textSize="@dimen/text_regular"
            app:layout_constraintBottom_toBottomOf="@id/imageButtonSelectStartDate"
            app:layout_constraintStart_toEndOf="@id/imageButtonSelectStartDate"
            app:layout_constraintTop_toTopOf="@id/imageButtonSelectStartDate"
            tools:text="June 19 9:00" />

        <ImageButton
            android:id="@+id/imageButtonCreateGroupEventStartTime"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/create_event"
            android:src="@drawable/ic_clock"
            app:layout_constraintBottom_toBottomOf="@id/textViewCreateGroupEventStartDate"
            app:layout_constraintEnd_toStartOf="@id/textViewCreateGroupEventStartTime"
            app:layout_constraintTop_toTopOf="@id/textViewCreateGroupEventStartDate" />

        <TextView
            android:id="@+id/textViewCreateGroupEventStartTime"
            style="@style/DescriptionTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_large"
            android:textSize="@dimen/text_regular"
            app:layout_constraintBottom_toBottomOf="@id/imageButtonCreateGroupEventStartTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageButtonCreateGroupEventStartTime"
            tools:text="00:00" />

        <ImageButton
            android:id="@+id/imageButtonSelectEndDate"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/spacing_large"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/create_event"
            android:src="@drawable/ic_calendar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageButtonSelectStartDate" />

        <TextView
            android:id="@+id/textViewCreateGroupEventEndDate"
            style="@style/DescriptionTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:textSize="@dimen/text_regular"
            app:layout_constraintBottom_toBottomOf="@id/imageButtonSelectEndDate"
            app:layout_constraintStart_toEndOf="@id/imageButtonSelectEndDate"
            app:layout_constraintTop_toTopOf="@id/imageButtonSelectEndDate"
            tools:text="June 19 10:00" />

        <ImageButton
            android:id="@+id/imageButtonCreateGroupEventEndTime"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/create_event"
            android:src="@drawable/ic_clock"
            app:layout_constraintBottom_toBottomOf="@id/textViewCreateGroupEventEndDate"
            app:layout_constraintEnd_toStartOf="@id/textViewCreateGroupEventEndTime"
            app:layout_constraintTop_toTopOf="@id/textViewCreateGroupEventEndDate" />

        <TextView
            android:id="@+id/textViewCreateGroupEventEndTime"
            style="@style/DescriptionTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_large"
            android:textSize="@dimen/text_regular"
            app:layout_constraintBottom_toBottomOf="@id/imageButtonCreateGroupEventEndTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageButtonCreateGroupEventEndTime"
            tools:text="00:00" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCreateGroupEventCreate"
            style="@style/Widget.App.RoundedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_xxlarge"
            android:layout_marginTop="@dimen/spacing_xxxlarge"
            android:text="@string/create_event"
            app:layout_constraintTop_toBottomOf="@id/imageButtonSelectStartDate" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>